--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,28 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<compilerArgs>
-						<args>-parameters</args>
-					</compilerArgs>
-					<target>1.8</target>
-				</configuration>
+					<cloudHubDeployment>
+                        <uri>https://anypoint.mulesoft.com</uri>
+                        <muleVersion>${mule.version}</muleVersion>
+                        <username>${anypoint.username}</username>
+                        <password>${anypoint.password}</password>
+                        <applicationName>${cloudhub.app}</applicationName>
+                        <environment>${cloudhub.environment}</environment>
+                        <businessGroup>${cloudhub.bg}</businessGroup>
+                        <workerType>${cloudhub.worker}</workerType>
+                        <region>${region}</region>
+                        <workers>${workers}</workers>
+                        <objectStoreV2>${objectStoreV2}</objectStoreV2>
+                        <properties>
+                            <env>${env}</env>
+                            <clientId>${clientId}</clientId>
+                            <clientSecret>${clientSecret}</clientSecret>
+                            <orgName>${orgName}</orgName>
+                        </properties>
+                    </cloudHubDeployment>
+                    </configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
