--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                         <muleVersion>${mule.version}</muleVersion>
                         <username>${anypoint.username}</username>
                         <password>${anypoint.password}</password>
-                        <applicationName>${cloudhub.app}</applicationName>
+                        <applicationName>${cloudhub.app}-symphony-poc</applicationName>
                         <environment>${cloudhub.environment}</environment>
                         <businessGroup>${cloudhub.bg}</businessGroup>
                         <workerType>${cloudhub.worker}</workerType>
