--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>${orgName}-symphony-poc</artifactId>
+	<artifactId>${orgName}-kenexa-exp-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>${orgName}-symphony-poc</name>
+	<name>${orgName}-kenexa-exp-api</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 		<app.runtime>4.1.4</app.runtime>
 		<mule.maven.plugin.version>3.5.2</mule.maven.plugin.version>
 		<drools.version>7.0.0.Final</drools.version>
@@ -27,27 +26,26 @@
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
-                        <uri>https://anypoint.mulesoft.com</uri>
-                        <muleVersion>${mule.version}</muleVersion>
-                        <username>${anypoint.username}</username>
-                        <password>${anypoint.password}</password>
-                        <applicationName>${cloudhub.app}-symphony-poc</applicationName>
-                        <environment>${cloudhub.environment}</environment>
-                        <businessGroup>${cloudhub.bg}</businessGroup>
-                        <workerType>${cloudhub.worker}</workerType>
-                        <region>${region}</region>
-                        <workers>${workers}</workers>
-                        <objectStoreV2>${objectStoreV2}</objectStoreV2>
-                        <properties>
-                            <env>${env}</env>
-                            <clientId>${clientId}</clientId>
-                            <clientSecret>${clientSecret}</clientSecret>
-                            <orgName>${orgName}</orgName>
-                        </properties>
-                    </cloudHubDeployment>
-                    </configuration>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>${mule.version}</muleVersion>
+						<username>${anypoint.username}</username>
+						<password>${anypoint.password}</password>
+						<applicationName>${cloudhub.app}-kenexa-exp-api</applicationName>
+						<environment>${cloudhub.environment}</environment>
+						<businessGroup>${cloudhub.bg}</businessGroup>
+						<workerType>${cloudhub.worker}</workerType>
+						<region>${region}</region>
+						<workers>${workers}</workers>
+						<objectStoreV2>${objectStoreV2}</objectStoreV2>
+						<properties>
+							<env>${env}</env>
+							<clientId>${clientId}</clientId>
+							<clientSecret>${clientSecret}</clientSecret>
+							<orgName>${orgName}</orgName>
+						</properties>
+					</cloudHubDeployment>
+				</configuration>
 			</plugin>
-			
 		</plugins>
 	</build>
 
@@ -99,6 +97,12 @@
 			<groupId>org.mule.module</groupId>
 			<artifactId>mule-java-module</artifactId>
 			<version>1.1.1</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.connectors</groupId>
+			<artifactId>mule-objectstore-connector</artifactId>
+			<version>1.1.7</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
