--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 						<muleVersion>${mule.version}</muleVersion>
 						<username>${anypoint.username}</username>
 						<password>${anypoint.password}</password>
-						<applicationName>${cloudhub.app}-kenexa-exp-api</applicationName>
+						<applicationName>${cloudhub.app}</applicationName>
 						<environment>${cloudhub.environment}</environment>
 						<businessGroup>${cloudhub.bg}</businessGroup>
 						<workerType>${cloudhub.worker}</workerType>
